<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    >

    <TextView
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:text="@string/settings_title"
        android:layout_marginBottom="5dp"
        android:textSize="16sp"
        />

    <View style="@style/VerticalDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_currentTimerDuration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="14sp" />

        <View style="@style/InlineDivider" />

        <Button
            android:id="@+id/settings_setTimerDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/settings_change"
            android:textColor="#BB86FC"
            android:textSize="14sp"
            android:padding="0dp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_currentDailyLimit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="14sp" />

        <View style="@style/InlineDivider" />

        <Button
            android:id="@+id/settings_setDailyLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/settings_change"
            android:textColor="#BB86FC"
            android:textSize="14sp"
            android:padding="0dp"
            style="@style/Widget.MaterialComponents.Button.TextButton" />
    </LinearLayout>

    <Button
        android:id="@+id/settings_testDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_test_duration"
        android:textColor="#BB86FC"
        android:textSize="14sp"
        android:padding="0dp"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

    <Button
        android:id="@+id/settings_resetTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_reset"
        android:textColor="#BB86FC"
        android:textSize="14sp"
        android:padding="0dp"
        style="@style/Widget.MaterialComponents.Button.TextButton" />

</LinearLayout>
